--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-pom.xml
-pom.xml.asc
-*jar
-/lib/
-/classes/
-/target/
-/checkouts/
+lib/
+classes/
+target/
+checkouts/
+js/
 .lein-deps-sum
 .lein-repl-history
 .lein-plugins/
