--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,12 @@
+notifications:
+  email: false
 language: clojure
+jdk:
+  - oraclejdk8
+before_script:
+  - npm install -g npm@latest
+  - npm install phantomjs-prebuilt@latest
+script:
+  - lein test
+  - lein cljsbuild once
+  - ./node_modules/phantomjs-prebuilt/bin/phantomjs ./resources/public/js/test.js ./resources/public/index.html
