--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
 script:
   - lein test
   - lein cljsbuild once
-  - ./node_modules/phantomjs-prebuilt/bin/phantomjs ./resources/public/js/test.js ./resources/public/index.html
+  - ./node_modules/phantomjs-prebuilt/bin/phantomjs ./resources/public/js/test.js
