--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
 script:
   - lein test
   - lein cljsbuild once
-  - sleep 1000
-  - ./node_modules/phantomjs-prebuilt/bin/phantomjs ./resources/public/js/test.js
+  - pwd
+#  - ./node_modules/phantomjs-prebuilt/bin/phantomjs ./resources/public/js/test.js
