--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,4 @@ before_script:
 script:
   - lein test
   - lein cljsbuild once
-  - pwd
-#  - ./node_modules/phantomjs-prebuilt/bin/phantomjs ./resources/public/js/test.js
+  - ./node_modules/phantomjs-prebuilt/bin/phantomjs browser_test.js
