--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ before_script:
 script:
   - lein test
   - lein cljsbuild once
-#  - ./node_modules/phantomjs-prebuilt/bin/phantomjs browser_test.js
+  - ./node_modules/phantomjs-prebuilt/bin/phantomjs -v
+  - ./node_modules/phantomjs-prebuilt/bin/phantomjs browser_test.js
