--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ before_script:
   - npm install phantomjs-prebuilt@latest
 script:
   - lein test
-  - lein figwheel &
+  - lein cljsbuild once
+  #- lein figwheel &
   # Need some way to trigger phantomjs script when lein is done loading
   # instead of this arbitrary sleep period
-  - sleep 60
-  - ./node_modules/phantomjs-prebuilt/bin/phantomjs browser_test.js
+  #- sleep 60
+  #- ./node_modules/phantomjs-prebuilt/bin/phantomjs browser_test.js
