--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_script:
 script:
   - lein test
   - lein cljsbuild once
-  #- lein figwheel &
+  - lein figwheel &
   # Need some way to trigger phantomjs script when lein is done loading
   # instead of this arbitrary sleep period
-  #- sleep 60
-  #- ./node_modules/phantomjs-prebuilt/bin/phantomjs browser_test.js
+  - sleep 60
+  - ./node_modules/phantomjs-prebuilt/bin/phantomjs browser_test.js
