--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ script:
   # Need some way to trigger phantomjs script when lein is done loading
   # instead of this arbitrary sleep period
   - sleep 60
-  - ./node_modules/phantomjs-prebuilt/bin/phantomjs browser_test.js
+  - ./node_modules/phantomjs-prebuilt/bin/phantomjs browser_test.js server
