--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ before_script:
   - npm install phantomjs-prebuilt@latest
 script:
   - lein test
-  - lein cljsbuild once
-  - lein ring server &
+  - lein figwheel &
   # Need some way to trigger phantomjs script when lein is done loading
   # instead of this arbitrary sleep period
   - sleep 60
